--- a/index.html
+++ b/index.html
@@ -52,23 +52,24 @@
         </div>
         <div class="output">
             <div class="output-header">
-                <h2>The Soccer Language goes here</h2>
+                <h2>The Soccer Language <span class="goes-here">goes here</span></h2>
             </div>
             <div class="output-text">
                 <textarea class="txt txt-output" rows="8" placeholder="Soccer language goes here.."></textarea>
             </div>
 
         </div>
-    </div>
-    <div class="sweg">
-        <h2>Like my</h2>
-        <img src="st_small_507x507-pad_600x600_f8f8f8.u8-removebg-preview.png" class="sweg-image" />
-        <h2>?</h2>
-        <br />
+        <div class="sweg">
+            <h2>Like my</h2>
+            <img src="st_small_507x507-pad_600x600_f8f8f8.u8-removebg-preview.png" class="sweg-image" />
+            <h2>?</h2>
+            <br />
+        </div>
+       
     </div>
     <div class="footer">
         <div class="footer-line">
-            <small>Made with 🤎 </small>
+            <small>Made with  </small>&nbsp; 🤎
         </div>
        
         <div class="social-icons">
@@ -96,6 +97,7 @@
 
         </div>
     </div>
+   
 
 
     <script type="text/javascript" src="app.js" ></script>
