fix:made with love span given

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
     <div class="footer">
         <div class="footer-line">
-            <small>Made with  </small>&nbsp; 🤎
+            <small>Made with <span>🤎</span> </small>&nbsp; 
         </div>
        
         <div class="social-icons">
