landscape mode abandoned

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="rotate"></div>
     <div class="container">
         <div class="header">
             <h1><span>D</span><span><img src="football.svg" class="football-O" /></span>LAND<span><img src="football.svg" class="football-O" /></span>
