--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 Nice to see you here!
                 I am here to teach you the language of Soccer!
                 Yes!!Dont you know the soccer ball speaks?
-                Master Ronaldo has taught me and I am on a secret mission to teach you the same.
+                Master Ronaldo has taught me this amazing skill and I am on a secret mission to teach you the same.
                 Tell me what you want to speak and I will reply in the soccer language..So..Why wait?Your gully team requires you!
             </div>
         </div>
